--- a/css/style_headerz_04.css
+++ b/css/style_headerz_04.css
@@ -3,6 +3,7 @@
   --menu_color: #FBFA34;
   --slider_text_color: #F9F13E;
   --menu_icons_color: #8AFF8E;
+  --accent_text_color: #FF7184;
 }
 *, *::after, *::before {
   margin: 0;
@@ -44,7 +45,7 @@ body {
 .logo {
   max-width: 51px;
   max-width: 53px;
-  padding-top: 40px;
+  margin: 40px 45px 0;
 }
 .menu_icon {
   width: 25px;
@@ -107,7 +108,46 @@ body {
 }
 /* Блок поиска */
 .search {
+  display: flex;
   grid-area: search;
+  flex-direction: column;
+  width: 311px;
+  padding-top: 98px;
+  justify-self: self-start;
+  align-self: self-start;
+  margin: 0 41px 0 89px;
+}
+.search_title {
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 61px;
+  text-transform: uppercase;
+  margin-bottom: 61px;
+}
+.accent_title {
+  color: var(--accent_text_color);
+}
+.search form {
+  display: flex;
+  flex-direction: column;
+}
+.search form select, input {
+  padding: 12px 20px;
+  border: 4px solid #000;
+  margin-bottom: 22px;
+  font-family: 'Roboto Mono', monospace;
+  max-width: 300px;
+}
+.search form select:nth-last-child(2) {
+  margin-bottom: 70px;
+}
+#btn_search {
+  max-width: 150px;
+  min-height: 48px;
+  padding: 13px 47px 17px;
+  color: #fff;
+  background-color: #000;
+  font-family: 'Roboto Mono', monospace;
 }
 /* Слайдер */
 .slider {
