--- a/css/style_headerz_04.css
+++ b/css/style_headerz_04.css
@@ -21,16 +21,26 @@ body {
 }
 .main {
   display: grid;
+  grid-template: 114px 1fr / 153px 495px auto;
   grid-template-areas: 
   "menu submenu submenu submenu"
   "menu search  picture picture"  
   "menu slider  picture picture";
+  width: 100vw;
   height: 100vh;
 }
 .picture {
   grid-area: picture;
-  width: 1272px;
-  /* grid: span 2/3/3/4; */
+  background: url(../img/headerz_04/bg_image.jpg) no-repeat;
+  background-size: 100% 100%;
+  max-width: 1272px;
+  height: 1006px;
+  /* grid: span 2/ span 3/ span 3/ 4; */
+}
+.picture img {
+  display: block;
+  max-width: 1272px;
+  min-height: 1006px;
 }
 /* Меню */
 .menu {
@@ -38,6 +48,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  max-width: 153px;
   align-items: center;
   grid-area: menu;
   grid-row: span 3;
@@ -55,6 +66,7 @@ body {
 /* Горизонтальное меню */
 .submenu {
   grid-area: submenu;
+  grid: 2/3/1/2;
 }
 .submenu li {
   list-style: none;
