--- a/css/style_headerz_04.css
+++ b/css/style_headerz_04.css
@@ -20,27 +20,23 @@ body {
   line-height: 24px;
 }
 .main {
+  height: 100vh;
+  width: 100vw;
+} 
+.container {
   display: grid;
-  grid-template: 114px 1fr / 153px 495px auto;
+  grid-template: 114px 1fr / 153px 495px 1fr;
   grid-template-areas: 
   "menu submenu submenu submenu"
   "menu search  picture picture"  
   "menu slider  picture picture";
-  width: 100vw;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
 }
 .picture {
   grid-area: picture;
-  background: url(../img/headerz_04/bg_image.jpg) no-repeat;
-  background-size: 100% 100%;
-  max-width: 1272px;
-  height: 1006px;
-  /* grid: span 2/ span 3/ span 3/ 4; */
-}
-.picture img {
-  display: block;
-  max-width: 1272px;
-  min-height: 1006px;
+  background: url(../img/headerz_04/bg_image.jpg)  no-repeat;
+  background-size: cover;
 }
 /* Меню */
 .menu {
@@ -127,7 +123,7 @@ body {
   padding-top: 98px;
   justify-self: self-start;
   align-self: self-start;
-  margin: 0 41px 0 89px;
+  margin: 0 91px 0 89px;
 }
 .search_title {
   font-size: 48px;
@@ -159,9 +155,113 @@ body {
   padding: 13px 47px 17px;
   color: #fff;
   background-color: #000;
+  border: none;
   font-family: 'Roboto Mono', monospace;
 }
 /* Слайдер */
 .slider {
+  display: flex;
   grid-area: slider;
+  justify-items: center;
+  justify-content: flex-start;
+  padding-left: 91px;
+  align-items: flex-end;
+}
+.slider_switch_block {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 185px;
+  margin-bottom: 78px;
+  margin-right: 72px;
+}
+.number_photo {
+  font-size: 41.6px;
+  font-weight: 700;
+  letter-spacing: 1.6px;
+  margin-right: 21px;
+}
+.line {
+  width: 32px;
+  height: 3.2px;
+  background-color: #000;
+  opacity: 0.20000000298023224;
+  margin-right: 8px;
+}
+.line:hover {
+  transition: opacity 1s ease;
+  opacity: 1;
+}
+.slider_block {
+  display: flex;
+  background-color: #000;
+  color: var(--slider_text_color);
+  min-width: 821px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 74.39px 0 76.61px 76.51px;
+}
+.arrow_right {
+  width: 28px;
+  height: 13px;
+  margin-right: 45px;
+  background-color: #000;
+  border: none;
+  cursor: pointer;
+}
+@media screen and (max-width: 1400px) {
+  .container {
+    grid-template: 114px 500px 1fr / 153px 495px 1fr;
+    grid-template-areas: 
+    "menu submenu submenu"
+    "menu search  picture"  
+    "menu slider  picture";
+  }
+  .slider {
+    flex-direction: column;
+    align-items: flex-start;
+    align-self: center;
+  }
+  .slider_block {
+    min-width: 300px;
+    height: 30px;
+    margin-right: 100px;
+    padding: 50px 0 50px 50px;
+  }
+  .menu_list, .slider, .search {
+    padding-left: 60px;
+    margin: 0;
+  }
+}
+@media screen and (max-width: 1300px) {
+  .container {
+    grid-template: 114px 1fr 1fr/ 153px 1fr 2fr;
+    grid-template-areas: 
+    "menu submenu submenu"
+    "menu search  picture"  
+    "menu slider  slider";
+    height: 100%;
+    width: 100%;
+  }
+  .slider {
+    flex-direction: row;
+    justify-content: space-between;
+    align-self: center;
+    justify-self: self-start;
+    align-items: center;
+  }
+  .slider_switch_block {
+    align-items: center;
+    justify-content: space-between;
+    max-width: 185px;
+    margin-bottom: 0;
+    margin-right: 135px;
+  }
+  .slider_block {
+    min-width: 600px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 74.39px 0 76.61px 76.51px;
+    margin-right: 0;
+  }
 }
